--- a/b-test.css
+++ b/b-test.css
@@ -6,6 +6,14 @@ h1 {
   background-color: blue;
   z-index: 1000;
 }
+#i {
+  height: 100px;
+  width: 100px;
+  background-color: green;
+  position: fixed;
+  top: 100px;
+  left: 400px;
+}
 .yellow {
   background-color: yellow; 
 }
